--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@auth0/angular-jwt": "^5.2.0",
     "@primeuix/themes": "^2.0.2",
     "bootstrap": "^5.3.8",
+    "chart.js": "^4.5.1",
     "jwt-decode": "^4.0.0",
     "ngx-toastr": "^19.1.0",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^21.0.1",
     "rxjs": "~7.8.0",
+    "signature_pad": "^5.1.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
